interpreter/tests/golden-files/conditional-shadowing.golden.enzo
//= SHADOWING: VARIABLE IN `If` BLOCK SHADOWS GLOBAL
"Inside If: if-shadow"
"Outside If: global"

//= REBINDING: MODIFYING GLOBAL VARIABLE FROM `If` BLOCK
"Inside If: shadowing it using rebind"
"Outside If: shadowing it using rebind"

//= SCOPE LEAKAGE: VARIABLE DECLARED IN `If` IS UNDEFINED OUTSIDE
error: undefined variable
    $z-local; // error: undefined variable

//= SCOPE ISOLATION: `If` AND `Else` BLOCKS HAVE SEPARATE SCOPES
"In Else: else-branch"; // Prints "else-branch"
error: undefined variable
    $if-var; // error: undefined variable (was defined in a separate scope)
"Afterward: global"

//= SCOPE ISOLATION: `Else if` HAS ITS OWN ISOLATED SCOPE
"In Else If: Level 1"
error: undefined variable
    $msg-scope; // error: undefined variable (each $msg was local to its own conditional block)

//= NESTED SHADOWING: INNER SCOPE SHADOWS OUTER SCOPE
"Innermost scope: level 3"
"Middle scope: level 2"
"Outermost scope: level 1"
